@@ -1,8 +1,9 @@
 Current Version: @@VERSION@@
 
-ctags-5.5.5 (Tue Aug 31 2004)
+ctags-5.5.5 (Thu Sep 02 2004)
 * Changed --langmap to first unmap each supplied extension from other languages.
 * Added support for ASP constants [ASP, Patch #961842].
+* Extended functionality of Ruby parser with patch from Elliot Hughes [Ruby].
 * Fixed creation of TAGS file with etags-include but no files [Bug #941233].
 * Fixed problem reading last line of list file (-L) without final newline.
 * Fixed infinite loop that could occur on files without final newline [C, Java].
